<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dialog_padding"
    android:background="@drawable/background_dialog">

    <EditText
        android:id="@+id/high_desc_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/default_high_descrpiton"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:padding="@dimen/dialog_padding"
        android:layout_margin="@dimen/dialog_margin"/>

    <EditText
        android:id="@+id/low_desc_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/default_low_description"
        android:padding="@dimen/dialog_padding"
        android:layout_margin="@dimen/dialog_margin"/>

    <CheckBox
        android:id="@+id/high_notify_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notify_when_high"
        android:padding="@dimen/dialog_padding"
        android:textColor="@android:color/black"/>

    <CheckBox
        android:id="@+id/low_notify_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notify_when_low"
        android:padding="@dimen/dialog_padding"
        android:textColor="@android:color/black"/>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_padding"
        android:layout_margin="@dimen/dialog_margin"
        android:src="@android:drawable/ic_menu_add"
        android:onClick="clickAdd"
        android:contentDescription="@android:string/ok"/>

</LinearLayout>